Accounts module
Included accounts module with User entity, repository and one use case
