# src/routes/specifications.routes.ts
@@ -1,14 +1,13 @@
 import { Router } from "express";
-import { CreateCategoryController } from "src/modules/cars/useCases/createCategory/CreateCategoryController";
 import { ListSpecificationsController } from "src/modules/cars/useCases/listSpecifications/ListSpecificationsController";
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
 
-const createCreateSpecificationController = new CreateSpecificationController();
+const createSpecificationController = new CreateSpecificationController();
 const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.post("/", createCreateSpecificationController.handle);
+specificationsRoutes.post("/", createSpecificationController.handle);
 
 specificationsRoutes.get("/", listSpecificationsController.handle);
 
